# rag_webquery

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
rag_webquery/: rag_webquery.py
