[tool.poetry]
name = "rag_webquery"
version = "0.1.0"
description = "Command line utility to query websites using a local LLM"
authors = ["Robert McDermott <robert.c.mcdermott@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/robert-mcdermott/rag_webquery"
keywords = ["llm"]


[tool.poetry.scripts]
rag-webquery = "rag_webquery:rag_webquery.main"

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "0.4.15"
bs4 = "^0.0.1"
requests = "^2.31.0"
gpt4all = "^2.0.2"
langchain = "^0.1.0"
langchain-community = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
